--- a/fe/l01_hw/table.html
+++ b/fe/l01_hw/table.html
@@ -122,6 +122,67 @@
 		<li>Item 4</li>
 	</ul>
 
+<table border="1">
+
+<tr>
+	<td> .... </td>
+	<td> .... </td>
+	<td> .... </td>
+	<td> .... </td>
+	<td> .... </td>
+	<td> .... </td>
+	<td colspan="2"> .... </td>
+	<td> .... </td>
+	<td> .... </td>
+</tr>
+<tr>
+	<td rowspan="2" colspan="2"> .... </td>
+	<td> .... </td>
+	<td> .... </td>
+	<td> .... </td>
+	<td> .... </td>
+	<td colspan="2"> .... </td>
+	<td> .... </td>
+	<td> .... </td>
+</tr>
+<tr>
+	<td> .... </td>
+	<td> .... </td>
+	<td> .... </td>
+	<td> .... </td>
+	<td colspan="2"> .... </td>
+	<td colspan="2"> .... </td>
+</tr>
+<tr>
+	<td> .... </td>
+	<td> .... </td>
+	<td rowspan="2" colspan="3"> .... </td>
+	<td> .... </td>
+	<td colspan="2"> .... </td>
+	<td> .... </td>
+	<td> .... </td>
+</tr>
+<tr>
+	<td> .... </td>
+	<td> .... </td>
+	<td rowspan="2"> .... </td>
+	<td colspan="2"> .... </td>
+	<td colspan="2"> .... </td>
+</tr>
+<tr>
+	<td colspan="2"> .... </td>
+	<td> .... </td>
+	<td> .... </td>
+	<td > .... </td>
+	<td> .... </td>
+	<td> .... </td>
+	<td colspan="2"> .... </td>
+</tr>
+
+
+</table> 
+
+
 	<a href="#top">Наверх страницы</a>
 	<a id="bottom"></a>
 	</body>
