Letter add, table update

--- a/fe/l01_hw/letter.html
+++ b/fe/l01_hw/letter.html
@@ -1,1 +1,105 @@
-Hello letter!
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta name="keywords" content="ключевые слова" />
+		<title>Test page</title>
+		<style>
+		   h1 {
+		    font-family: Calibri;
+		    font-weight: bold;
+		    text-align:center
+			}
+			h2 {
+				font-family: Segoe UI;
+			}
+		  </style>
+	</head>
+	<body>
+	<div>
+		<h1>Замечательное письмо</h1>
+		<h2>Добрый день Александр!</h2>
+		<p>Отправляю тебе письмо в котором хочу рассказать:</p>
+			<ol>
+				<li> Великолепное стихотворение Александра Сергеевича Пушкина</li>	
+				<li>Теорему ферма</li>
+				<li>Язык С#</li>
+			</ol>
+		<a href="mailto:">Отправить на почту</a>
+		<hr>
+	</div>
+	<div>
+		<h1>ЗИМНЕЕ УТРО</h1>
+		<p>
+			<em>
+				<font face="Calibri" >
+					<pre>
+				Мороз и солнце; день чудесный!
+			Еще ты дремлешь, друг прелестный -
+			Пора, красавица, проснись:
+			Открой сомкнуты негой взоры
+			Навстречу северной Авроры,
+			Звездою севера явись!
+
+			Вечор, ты помнишь, вьюга злилась,
+			На мутном небе мгла носилась;
+			Луна, как бледное пятно,
+			Сквозь тучи мрачные желтела,
+			И ты печальная сидела -
+			А нынче... погляди в окно:
+
+			Под голубыми небесами
+			Великолепными коврами,
+			Блестя на солнце, снег лежит;
+			Прозрачный лес один чернеет,
+			И ель сквозь иней зеленеет,
+			И речка подо льдом блестит.
+
+			Вся комната янтарным блеском
+			Озарена. Веселым треском
+			Трещит затопленная печь.
+			Приятно думать у лежанки.
+			Но знаешь: не велеть ли в санки
+			Кобылку бурую запречь?
+
+			Скользя по утреннему снегу,
+			Друг милый, предадимся бегу
+			Нетерпеливого коня
+			И навестим поля пустые,
+			Леса, недавно столь густые,
+			И берег, милый для меня.
+					</pre>
+				</font>
+			</em>
+		</p>
+	<h3>1829</h3>
+	<h5>A.C. Пугкин. Сочинение в трех томах <br>
+		Санкт-Петербург: Золотой век, Диамант, 1997.
+	</h5>
+	</div>
+	<div>
+		<hr>
+		<h1>ТУОРЕМА ФЕРМА</h1>
+		<p>Для любого натурального числа n>2 уравнение:</p>
+		<p>a <sup>n</sup> + b <sup>n</sup> = c <sup>n</sup></p>
+		<p>не имеет натуральныйх решений a, b и с</p>
+		<hr>
+	</div>
+	<div>
+		<h1>Язык С#</h1>
+		<p>
+			<strong>C#</strong> (произносится <em>си шарп</em>) — объектно-ориентированный язык программирования. <br>
+			Разработан в 1998—2001 годах группой инженеров под руководством Андерса <br>
+			Хейлсберга в компании Microsoft как язык разработки приложений для <br>
+			платформы Microsoft .NET Framework и впоследствии был стандартизирован как ECMA-334 и ISO/IEC 23270. <br>
+			<br>
+			C# относится к семье языков с C-подобным синтаксисом, из них его синтаксис <br>
+			наиболее близок к C++ и Java. Язык имеет статическую типизацию, <br>поддерживает полиморфизм, перегрузку операторов (в том числе операторов явного <br>
+			и неявного приведения типа), делегаты, <br>
+			атрибуты, события, свойства, обобщённые типы и методы, итераторы, <em>анонимные</em><br>
+			функции с поддержкой замыканий, LINQ, исключения, комментарии в формате XML.
+		</p>
+	</div>
+
+	</body>
+</html>
