--- a/fe/l02_hw/forms/form.html
+++ b/fe/l02_hw/forms/form.html
@@ -10,15 +10,14 @@
 </head>
 <body>
 <h1>Шановний учаснику конкурсу «Вчитель-новатор»!</h1>
-	<pre>
+
 	<p>
-	Заповніть, будь ласка, реєстраційну анкету українською мовою.
-	Прохання надати повну відповідь на всі поставлені запитання.
-	Якщо ви подаєте декілька конкурсних робіт, будь ласка,
-	заповніть дану анкету для кожної конкурсної роботи окремо.
-	Дякуємо Вам за участь у конкурсі та бажаємо успіхів!
+	Заповніть, будь ласка, реєстраційну анкету українською мовою. <br>
+	Прохання надати повну відповідь на всі поставлені запитання. <br>
+	Якщо ви подаєте декілька конкурсних робіт, будь ласка, <br>
+	заповніть дану анкету для кожної конкурсної роботи окремо. <br>
+	Дякуємо Вам за участь у конкурсі та бажаємо успіхів! <br>
 	</p>
-	</pre>
 
 	<form action="/formhandler.php" method="POST" name="Анкета">
 		<p>
@@ -87,7 +86,7 @@
 			<p>інше</p><input type="text" name="text15" size="20" maxlength="50" value="">
 		<p>Я даю згоду на обробку моїх персональних даних і погоджуюся з Політикою конфіденційності (галочка обязательна)</p>
 		<p><input type="checkbox" name="variant9" value="sendform" checked="">Згоден</p>
-<!--Кнопки-->
+<!--Buttons-->
 		<p>
 			<input type="submit" name="sentform" value="Подати анкету">
 			<input type="reset" name="resetform" value="Заповнити знову">
