add css to forms.html

--- a/fe/l02_hw/dominos/dominos.html
+++ b/fe/l02_hw/dominos/dominos.html
@@ -4,7 +4,7 @@
 	<title>Dominos</title>
 	<meta charset="UTF-8">
 	<meta name="keywords" content="Dominos, HTML, CSS">
-	<meta name="description" content="Dominos"
+	<meta name="description" content="Dominos">
 	<meta name="author" content="Volosovich Andrey">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
