adde 762px css style

--- a/fe/l02_hw/forms/form.html
+++ b/fe/l02_hw/forms/form.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Dominos</title>
+	<title>Форма анкети</title>
 	<meta charset="UTF-8">
 	<meta name="keywords" content="Forms, HTML, CSS">
 	<meta name="description" content="Forms">
 	<meta name="author" content="Volosovich Andrey">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style762.css" media="only screen and (max-width:762px)">
 </head>
 <body>
 
@@ -125,10 +126,12 @@
 		<p>Я даю згоду на обробку моїх персональних даних і погоджуюся з Політикою конфіденційності (галочка обязательна)</p>
 		<p><input type="checkbox" name="variant9" value="sendform" checked="">Згоден</p>
 <!--Buttons-->
+		<div>
 		<p>
 			<input type="submit" name="sentform" value="Подати анкету">
 			<input type="reset" name="resetform" value="Заповнити знову">
 		</p>
+		</div>
 	</form>
 </div>
 </body>
