--- a/fe/l02_hw/dominos/dominos.html
+++ b/fe/l02_hw/dominos/dominos.html
@@ -11,66 +11,35 @@
 <body>
 	<br>
 	<div class="container">
-		<div class="in_container">
-			<div class="center_me">
-				<div class="circle"></div>
-			</div>
-		</div>
-		<div class="in_container">
-			<div class="center_me">
-				<div class="circle"></div>
-			</div>
+		<div class="center_me">
+			<div class="circle"></div>
 		</div>
 	</div>
 
 
-	<div class="container">
-		<div class="in_container">
-			<div class="left_me">
-				<div class="circle"></div>
-			</div>
-			<div class="right_bottom_me">
-				<div class="circle"></div>
-			</div>
-		</div>
-		<div class="in_container">
-			<div class="left_me">
-				<div class="circle"></div>
-			</div>
-			<div class="right_bottom_me">
-				<div class="circle"></div>
-			</div>
-		</div>
-	</div>
-
-
-	<div class="container">
-		<div class="in_container">
-			<div class="left_me">
-				<div class="circle"></div>
-			<div class="center_me">
-				<div class="circle"></div>
-			</div>
-			</div>
-		</div>
-
-
-		<div class="in_container">
-			<div class="left_me">
-				<div class="circle"></div>
-			</div>
-		</div>
 
 
 
 
-	</div>
-
-
-
-
-
-
-
-</bpody>
+</body>
 </html>
+<!--<table class="center_me" border="1" width="100%" align="center" valign="center">-->
+<!--<tr>-->
+<!--<td><div class="circle"></div></td>-->
+<!--<td><div class="circle"></div></td>-->
+<!--<td><div class="circle"></div></td>-->
+<!--</tr>-->
+<!--<tr>-->
+<!--<td><div class="circle"></div></td>-->
+<!--<td><div class="circle"></div></td>-->
+<!--<td><div class="circle"></div></td>-->
+
+<!--</tr>-->
+<!--<tr>-->
+<!--<td><div class="circle"></div></td>-->
+<!--<td><div class="circle"></div></td>-->
+<!--<td><div class="circle"></div></td>-->
+
+<!--</tr>-->
+<!--</table>-->
+<!--</div>-->
