--- a/be/functions_forms_tasks/task_01/1.html
+++ b/be/functions_forms_tasks/task_01/1.html
@@ -8,5 +8,11 @@
 </head>
 <body>
 	
+	<form action="1.php" method="POST" accept-charset="utf-8">
+		<input type="text" name="varA"> <br>
+		<input type="text" name="varaB"> <br>
+		<input type="submit" name="submit" value="Отправить">
+	</form>
+
 </body>
 </html>
