--- a/be/functions_forms_tasks/task_01/1.html
+++ b/be/functions_forms_tasks/task_01/1.html
@@ -8,11 +8,15 @@
 </head>
 <body>
 	
-	<form action="1.php" method="POST" accept-charset="utf-8">
+	<form action="1.php" method="get" accept-charset="utf-8">
 		<input type="text" name="varA"> <br>
-		<input type="text" name="varaB"> <br>
+		<input type="text" name="varB"> <br>
 		<input type="submit" name="submit" value="Отправить">
 	</form>
+
+<?php 
+	echo phpinfo();
+?>
 
 </body>
 </html>
