--- a/be/functions_forms_tasks/task_01/1.html
+++ b/be/functions_forms_tasks/task_01/1.html
@@ -2,21 +2,17 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" charset="utf-8">
 	<title></title>
 	<link rel="stylesheet" href="">
 </head>
 <body>
 	
-	<form action="1.php" method="get" accept-charset="utf-8">
+	<form action="1.php" method="get">
 		<input type="text" name="varA"> <br>
 		<input type="text" name="varB"> <br>
 		<input type="submit" name="submit" value="Отправить">
 	</form>
-
-<?php 
-	echo phpinfo();
-?>
 
 </body>
 </html>
