--- a/be/functions_forms_tasks/task_02/2.html
+++ b/be/functions_forms_tasks/task_02/2.html
@@ -9,10 +9,9 @@
 <body>
 	<p>Заполните поле</p>
 	<form action="2.php" method="GET">
-		<textarea name="textarea" rows="10" cols="45">
+		<textarea name='textarea' rows='10' cols='45'>
 		</textarea><br>
-		
-		<input type="submit" name="submit" value="Отправить">
+		<input type='submit' name='submit' value='Отправить'>
 	</form>
 
 </body>
